--- a/src/app/layouts/full/vertical-header/vertical-header.component.html
+++ b/src/app/layouts/full/vertical-header/vertical-header.component.html
@@ -89,8 +89,8 @@
   <img src="assets/images/users/1.jpg" alt="user" class="profile-pic" />
 </button>
 <mat-menu #profile="matMenu" class="mymegamenu">
-  <button mat-menu-item><mat-icon>settings</mat-icon> Settings</button>
-  <button mat-menu-item><mat-icon>account_box</mat-icon> Profile</button>
+  <button mat-menu-item  (click)="settings()"><mat-icon>settings</mat-icon> Settings</button>
+  <button mat-menu-item (click)="settings()"><mat-icon >account_box</mat-icon> Profile</button>
   <!--  <button mat-menu-item><mat-icon>notifications_off</mat-icon> Disable notifications</button>-->
   <button mat-menu-item (click)="logout()"><mat-icon>exit_to_app</mat-icon> Sign Out</button>
 </mat-menu>
