--- a/src/app/layouts/full/vertical-sidebar/vertical-sidebar.component.html
+++ b/src/app/layouts/full/vertical-sidebar/vertical-sidebar.component.html
@@ -26,8 +26,8 @@
     </a>
   </div>
   <mat-menu #sdprofile="matMenu" class="mymegamenu">
-    <button mat-menu-item><mat-icon>settings</mat-icon> Settings</button>
-    <button mat-menu-item><mat-icon>account_box</mat-icon> Profile</button>
+    <button mat-menu-item (click)="settings()"><mat-icon >settings</mat-icon> Settings</button>
+    <button mat-menu-item (click)="profile()"><mat-icon >account_box</mat-icon> Profile</button>
     <!--<button mat-menu-item><mat-icon>notifications_off</mat-icon> Disable notifications</button>-->
     <button mat-menu-item (click)="logout()"><mat-icon>exit_to_app</mat-icon> Sign Out</button>
   </mat-menu>
