removido o campo 'remember me'

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -26,12 +26,8 @@
                     </mat-form-field>
                 </div>
                 <!-- col half-->
-                <div fxFlex.gt-sm="50" fxFlex.gt-xs="50">
-                    <mat-checkbox color="warn">Remember me</mat-checkbox>
-                </div>
-                <!-- col half-->
                 <div fxFlex.gt-sm="50" fxFlex.gt-xs="50" class="text-right">
-                    <a [routerLink]="['/authentication/forgot']" class="link">Forgot pwd?</a>
+                    <a [routerLink]="['/authentication/forgot']" class="link">Forgot password?</a>
                 </div>
                 <!-- col full-->
                 <div fxFlex.gt-sm="100" fxFlex.gt-xs="100" fxFlex="100">
