--- a/src/app/pages/history/history.component.html
+++ b/src/app/pages/history/history.component.html
@@ -30,6 +30,9 @@
         </mat-select>
       </mat-form-field>
       </div>
+      <div style="margin-left: 20px; align-items:center;margin-top: 20px;" fxFlex.gt-xs="15" fxFlex="100">
+      <mat-icon (click)="onChange($event.value)" >search</mat-icon>
+      </div>
     </div>
 
     <div style="margin-top: 20px;">
