--- a/src/app/pages/dashboard-components/top-card2/top-card2.component.html
+++ b/src/app/pages/dashboard-components/top-card2/top-card2.component.html
@@ -9,7 +9,7 @@
       <h3 class="m-0" class="medal_{{currentUser.LevelUserId}}" *ngIf="currentUser.LevelUserId === 2" >Silver </h3>
       <h3 class="m-0" class="medal_{{currentUser.LevelUserId}}" *ngIf="currentUser.LevelUserId === 3" >Gold  </h3>
       <h3 class="m-0" class="medal_{{currentUser.LevelUserId}}" *ngIf="currentUser.LevelUserId === 4" >Platinum  </h3>
-      <h5 class="text-muted m-t-0 m-b-10">Nível</h5>
+      <h5 class="text-muted m-t-0 m-b-10">Nível do Usuário</h5>
       <mat-progress-bar mode="determinate" value="10"></mat-progress-bar>
     </mat-card-content>
   </mat-card>
@@ -22,8 +22,8 @@
     <mat-card-content>
       <!-- column -->
       <mat-icon class="text-danger">local_mall</mat-icon>
-      <h3 class="m-0">1386</h3>
-      <h5 class="text-muted m-t-0 m-b-10">Novos Projetos</h5>
+      <h3 class="m-0">0,00</h3>
+      <h5 class="text-muted m-t-0 m-b-10">Saldo da Conta</h5>
       <mat-progress-bar color="warn" mode="determinate" value="60"></mat-progress-bar>
     </mat-card-content>
   </mat-card>
@@ -35,8 +35,8 @@
     <mat-card-content>
       <!-- column -->
       <mat-icon class="text-purple">stars</mat-icon>
-      <h3 class="m-0">986</h3>
-      <h5 class="text-muted m-t-0 m-b-10">Novos Itens</h5>
+      <h3 class="m-0">NÃO VERIFICADA</h3>
+      <h5 class="text-muted m-t-0 m-b-10">Conta Verificada?</h5>
       <mat-progress-bar color="accent" mode="determinate" value="80"></mat-progress-bar>
     </mat-card-content>
   </mat-card>
@@ -47,22 +47,9 @@
   <mat-card>
     <mat-card-content>
       <!-- column -->
-      <mat-icon  id="medal" class="medal_{{currentUser.LevelUserId}}" >workspace_premium</mat-icon>
-      <h3 class="m-0" class="medal_{{currentUser.LevelUserId}}" *ngIf="currentUser.LevelUserId === 1" >Bronze </h3>
-      <h3 class="m-0" class="medal_{{currentUser.LevelUserId}}" *ngIf="currentUser.LevelUserId === 2" >Silver </h3>
-      <h3 class="m-0" class="medal_{{currentUser.LevelUserId}}" *ngIf="currentUser.LevelUserId === 3" >Gold  </h3>
-      <h3 class="m-0" class="medal_{{currentUser.LevelUserId}}" *ngIf="currentUser.LevelUserId === 4" >Platinum  </h3>
-      <h5 class="text-muted m-t-0 m-b-10">Nível</h5>
-      <mat-progress-bar mode="determinate" value="40"></mat-progress-bar>
-    </mat-card-content>
-  </mat-card>
-
-  <mat-card>
-    <mat-card-content>
-      <!-- column -->
       <mat-icon class="text-info">account_circle</mat-icon>
-      <h3 class="m-0">386</h3>
-      <h5 class="text-muted m-t-0 m-b-10">Novos Clientes</h5>
+      <h3 class="m-0">2147483274</h3>
+      <h5 class="text-muted m-t-0 m-b-10">Id da Conta</h5>
       <mat-progress-bar mode="determinate" value="40"></mat-progress-bar>
     </mat-card-content>
   </mat-card>
