Ajuste no gráfico da home

--- a/src/app/pages/dashboard-components/visitor2/visitor2.component.html
+++ b/src/app/pages/dashboard-components/visitor2/visitor2.component.html
@@ -1,7 +1,7 @@
 <mat-card>
   <mat-card-content>
-    <mat-card-title>Our Visitors</mat-card-title>
-    <mat-card-subtitle>Different Devices Used to Visit</mat-card-subtitle>
+    <mat-card-title>Minhas Transações</mat-card-title>
+    <mat-card-subtitle>Detalhamento por Tipo</mat-card-subtitle>
     <div
       id="visitor-chart"
       class="d-flex flex-column justify-content-center m-auto"
@@ -26,15 +26,15 @@
     <ul class="list-inline text-center">
       <li>
         <h6 class="text-muted text-success m-0">
-          <i class="fa fa-circle font-10 m-r-10"></i>Mobile
+          <i class="fa fa-circle font-10 m-r-10"></i>Depósito de Valor
         </h6>
       </li>
       <li>
-        <h6 class="text-muted text-info m-0"><i class="fa fa-circle font-10 m-r-10"></i>Desktop</h6>
+        <h6 class="text-muted text-info m-0"><i class="fa fa-circle font-10 m-r-10"></i>Transferência Online</h6>	
       </li>
       <li>
         <h6 class="text-muted text-purple m-0">
-          <i class="fa fa-circle font-10 m-r-10"></i>Tablet
+          <i class="fa fa-circle font-10 m-r-10"></i>Recarga Celular
         </h6>
       </li>
     </ul>
