Ajuste nos Cards

--- a/src/app/pages/dashboard-components/sales-purchase/sales-purchase.component.html
+++ b/src/app/pages/dashboard-components/sales-purchase/sales-purchase.component.html
@@ -6,8 +6,8 @@
         <div class="d-flex p-t-20 p-b-20 no-block align-items-center">
           <div class="stats">
             <h3 class="text-white m-0">Quantidade Transações Realizadas</h3>
-            <h6 class="text-white m-t-0">March 2018</h6>
-            <h1 class="text-white m-0">35487</h1>
+            <h6 class="text-white m-t-0"></h6>
+            <h1 class="text-white m-0">5</h1>
           </div>
           <div class="ml-auto" style="height: 84px; width: 100px">
             <div class="d-flex flex-column">
@@ -39,9 +39,9 @@
         <!-- column -->
         <div class="d-flex p-t-20 p-b-20 no-block align-items-center">
           <div class="stats">
-            <h3 class="text-white m-0">Valor Transações</h3>
-            <h6 class="text-white m-t-0">March 2018</h6>
-            <h1 class="text-white m-0">35487</h1>
+            <h3 class="text-white m-0">Valor Em Transações</h3>
+            <h6 class="text-white m-t-0"></h6>
+            <h1 class="text-white m-0">950,00</h1>
           </div>
           <div class="ml-auto" style="height: 84px; width: 100px">
             <div class="d-flex flex-column">
