--- a/src/app/layouts/full/vertical-sidebar/vertical-sidebar.component.html
+++ b/src/app/layouts/full/vertical-sidebar/vertical-sidebar.component.html
@@ -21,7 +21,7 @@
   <!-- ============================================================== -->
   <div class="profile-text">
     <a [matMenuTriggerFor]="sdprofile" class="d-flex align-items-center">
-      {{currentUser.name}}
+      {{currentUser?.name}}
       <i class="ti-angle-down font-12 ml-auto"></i>
     </a>
   </div>
