--- a/src/app/pages/dashboard-components/top-card2/top-card2.component.html
+++ b/src/app/pages/dashboard-components/top-card2/top-card2.component.html
@@ -21,8 +21,8 @@
   <mat-card>
     <mat-card-content>
       <!-- column -->
-      <mat-icon class="text-danger">local_mall</mat-icon>
-      <h3 class="m-0">0,00</h3>
+      <mat-icon class="text-danger">account_balance_wallet</mat-icon>
+      <h3 class="m-0">{{currentUser.balance}}</h3>
       <h5 class="text-muted m-t-0 m-b-10">Saldo da Conta</h5>
       <mat-progress-bar color="warn" mode="determinate" value="60"></mat-progress-bar>
     </mat-card-content>
@@ -35,7 +35,8 @@
     <mat-card-content>
       <!-- column -->
       <mat-icon class="text-purple">stars</mat-icon>
-      <h3 class="m-0">NÃO VERIFICADA</h3>
+      <h3 class="m-0" *ngIf="currentUser.verified_identity === 0" >NÃO VERIFICADA</h3>
+      <h3 class="m-0" *ngIf="currentUser.verified_identity != 0">VERIFICADA</h3>
       <h5 class="text-muted m-t-0 m-b-10">Conta Verificada?</h5>
       <mat-progress-bar color="accent" mode="determinate" value="80"></mat-progress-bar>
     </mat-card-content>
@@ -48,7 +49,7 @@
     <mat-card-content>
       <!-- column -->
       <mat-icon class="text-info">account_circle</mat-icon>
-      <h3 class="m-0">2147483274</h3>
+      <h3 class="m-0">{{currentUser.account_id}}</h3>
       <h5 class="text-muted m-t-0 m-b-10">Id da Conta</h5>
       <mat-progress-bar mode="determinate" value="40"></mat-progress-bar>
     </mat-card-content>
