Ajustado os labels de vários títulos (padronizado em ingles)

--- a/src/app/pages/company/register-companies-list/create-company/create-company.component.html
+++ b/src/app/pages/company/register-companies-list/create-company/create-company.component.html
@@ -1,7 +1,7 @@
 
 <mat-dialog-content class="mat-typography">
   <mat-card-content>
-    <mat-card-title  mat-dialog-title style="margin-top: 20px; margin-bottom: 50px;">Cadastrar Empresa</mat-card-title>
+    <mat-card-title  mat-dialog-title style="margin-top: 20px; margin-bottom: 50px;">Register New Company</mat-card-title>
 
     <div>
       <mat-form-field>
@@ -26,8 +26,8 @@
 
           <div align="end">
             <mat-dialog-actions align="end" >
-              <button mat-button mat-dialog-close>Fechar</button>
-              <button mat-button  color="warn" (click)="onCreateEmpresa()" cdkFocusInitial>Cadastrar</button>
+              <button mat-button mat-dialog-close>Close</button>
+              <button mat-button  color="warn" (click)="onCreateEmpresa()" cdkFocusInitial>Register</button>
             </mat-dialog-actions>
      
       <button  mat-raised-button color="warn" a  matSuffix ></button></div>
