--- a/src/app/pages/dashboard-components/visitor2/visitor2.component.html
+++ b/src/app/pages/dashboard-components/visitor2/visitor2.component.html
@@ -1,7 +1,7 @@
 <mat-card>
   <mat-card-content>
-    <mat-card-title>Minhas Transações</mat-card-title>
-    <mat-card-subtitle>Detalhamento por Tipo</mat-card-subtitle>
+    <mat-card-title>My transactions</mat-card-title>
+    <mat-card-subtitle>Summary by Type</mat-card-subtitle>
     <div
       id="visitor-chart"
       class="d-flex flex-column justify-content-center m-auto"
