--- a/src/app/pages/company/register-companies-list/register-companies-list.component.html
+++ b/src/app/pages/company/register-companies-list/register-companies-list.component.html
@@ -1,7 +1,7 @@
 <mat-card>
     <div class="box">
         <div  class="btnCreate">
-    <button  mat-raised-button color="warn" matSuffix  (click)="openCreateCompany()">Criar Senha de Segurança</button>
+    <button  mat-raised-button color="warn" matSuffix  (click)="openCreateCompany()">Register Company</button>
 </div>
 </div>
  
