--- a/src/app/pages/dashboard-components/sales-purchase/sales-purchase.component.html
+++ b/src/app/pages/dashboard-components/sales-purchase/sales-purchase.component.html
@@ -5,7 +5,7 @@
         <!-- column -->
         <div class="d-flex p-t-20 p-b-20 no-block align-items-center">
           <div class="stats">
-            <h3 class="text-white m-0">Quantidade Transações Realizadas</h3>
+            <h3 class="text-white m-0">Amount of Transactions Realized</h3>
             <h6 class="text-white m-t-0"></h6>
             <h1 class="text-white m-0">5</h1>
           </div>
@@ -39,7 +39,7 @@
         <!-- column -->
         <div class="d-flex p-t-20 p-b-20 no-block align-items-center">
           <div class="stats">
-            <h3 class="text-white m-0">Valor Em Transações</h3>
+            <h3 class="text-white m-0">Value in Transactions</h3>
             <h6 class="text-white m-t-0"></h6>
             <h1 class="text-white m-0">950,00</h1>
           </div>
