--- a/src/app/pages/dashboard-components/sales-yearly/sales-yearly.component.html
+++ b/src/app/pages/dashboard-components/sales-yearly/sales-yearly.component.html
@@ -1,8 +1,8 @@
 <mat-card>
   <mat-card-content>
     <!-- column -->
-    <mat-card-title>Histórico de Transações</mat-card-title>
-    <mat-card-subtitle>Quantidade de transações ao longo do Ano</mat-card-subtitle>
+    <mat-card-title>Transaction History</mat-card-title>
+    <mat-card-subtitle>Number of transactions over the year</mat-card-subtitle>
     <div id="chart" class="d-flex flex-column">
       <apx-chart
         [series]="chartOptions.series"
