--- a/src/app/pages/dashboard-components/top-card2/top-card2.component.html
+++ b/src/app/pages/dashboard-components/top-card2/top-card2.component.html
@@ -9,7 +9,7 @@
       <h3 class="m-0" class="medal_{{currentUser.LevelUserId}}" *ngIf="currentUser.LevelUserId === 2" >Silver </h3>
       <h3 class="m-0" class="medal_{{currentUser.LevelUserId}}" *ngIf="currentUser.LevelUserId === 3" >Gold  </h3>
       <h3 class="m-0" class="medal_{{currentUser.LevelUserId}}" *ngIf="currentUser.LevelUserId === 4" >Platinum  </h3>
-      <h5 class="text-muted m-t-0 m-b-10">Nível do Usuário</h5>
+      <h5 class="text-muted m-t-0 m-b-10">User Level</h5>
       <mat-progress-bar mode="determinate" value="10"></mat-progress-bar>
     </mat-card-content>
   </mat-card>
@@ -23,7 +23,7 @@
       <!-- column -->
       <mat-icon class="text-danger">account_balance_wallet</mat-icon>
       <h3 class="m-0">{{currentUser.balance}}</h3>
-      <h5 class="text-muted m-t-0 m-b-10">Saldo da Conta</h5>
+      <h5 class="text-muted m-t-0 m-b-10">Account Balance</h5>
       <mat-progress-bar color="warn" mode="determinate" value="60"></mat-progress-bar>
     </mat-card-content>
   </mat-card>
@@ -35,9 +35,9 @@
     <mat-card-content>
       <!-- column -->
       <mat-icon class="text-purple">stars</mat-icon>
-      <h3 class="m-0" *ngIf="currentUser.verified_identity === 0" >NÃO VERIFICADA</h3>
-      <h3 class="m-0" *ngIf="currentUser.verified_identity != 0">VERIFICADA</h3>
-      <h5 class="text-muted m-t-0 m-b-10">Conta Verificada?</h5>
+      <h3 class="m-0" *ngIf="currentUser.verified_identity === 0" >NOT VERIFIED</h3>
+      <h3 class="m-0" *ngIf="currentUser.verified_identity != 0">VERIFIED</h3>
+      <h5 class="text-muted m-t-0 m-b-10">Checked Account?</h5>
       <mat-progress-bar color="accent" mode="determinate" value="80"></mat-progress-bar>
     </mat-card-content>
   </mat-card>
@@ -50,7 +50,7 @@
       <!-- column -->
       <mat-icon class="text-info">account_circle</mat-icon>
       <h3 class="m-0">{{currentUser.account_id}}</h3>
-      <h5 class="text-muted m-t-0 m-b-10">Id da Conta</h5>
+      <h5 class="text-muted m-t-0 m-b-10">Account Id</h5>
       <mat-progress-bar mode="determinate" value="40"></mat-progress-bar>
     </mat-card-content>
   </mat-card>
