--- a/src/app/pages/credit-card-deposit/credit-card-deposit.component.scss
+++ b/src/app/pages/credit-card-deposit/credit-card-deposit.component.scss
@@ -7,6 +7,27 @@ input.example-right-align::-webkit-inner-spin-button {
   display: none;
 }
 
+#left {
+  float:left;
+  width:220px;
+}
+#teste {
+  border: 1px solid;
+  background-color:#a3a2f1;
+  width:600px;
+  margin-left:5px;
+  margin-top:5px;
+  float:left;
+  padding: 4px;
+}
+.break-line {
+  white-space: pre-wrap;
+}
+.break {
+  flex-basis: 100%;
+  height: 0;
+}
+
 input.example-right-align {
   -moz-appearance: textfield;
 }
