--- a/src/app/pages/dashboard-components/home-user/home-user.component.html
+++ b/src/app/pages/dashboard-components/home-user/home-user.component.html
@@ -9,18 +9,18 @@
 <div fxLayout="row wrap">
   <!-- column -->
   <div fxFlex.gt-md="33.33" fxFlex.gt-xs="100" fxFlex="100">
-    <app-sales-purchase></app-sales-purchase>
+    <app-sales-purchase-user></app-sales-purchase-user>
   </div>
   <!-- column -->
   <!-- column -->
-  <div fxFlex.gt-md="33.33" fxFlex.gt-xs="100" fxFlex="100">
-    <app-visitor2></app-visitor2>
+  <div fxFlex.gt-md="66.66" fxFlex.gt-xs="100" fxFlex="100">
+    <app-visitor-user></app-visitor-user>
   </div>
   <!-- column -->
-  <!-- column -->
+  <!-- column
   <div fxFlex.gt-md="33.33" fxFlex.gt-xs="100" fxFlex="100">
     <app-sales-yearly></app-sales-yearly>
-  </div>
+  </div> -->
   <!-- column -->
 
   <!-- column -->
