--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -597,6 +597,20 @@ Text Colors
   color: $danger !important;
 }
 
+.visitor-A1 {
+  color: #1e88e5 !important;
+}
+.visitor-A2 {
+  color: #26c6da !important;
+}
+.visitor-A3 {
+  color: #745af2 !important;
+}
+.visitor-A4 {
+  color: #eceff1 !important;
+}
+
+
 .text-muted {
   color: $muted !important;
 }
