--- a/src/app/pages/history/history.component.html
+++ b/src/app/pages/history/history.component.html
@@ -9,21 +9,21 @@
     <div fxLayout="row wrap">
       <div fxFlex.gt-xs="15" fxFlex="100">
         <mat-form-field>
-          <input matInput [matDatepicker]="picker" placeholder="Data inicial"  [(ngModel)]="dateInit"/>
+          <input matInput [matDatepicker]="picker" placeholder="{{initial_date|translate}}"  [(ngModel)]="dateInit"/>
           <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
       </div>
       <div style="margin-left: 20px;" fxFlex.gt-xs="15" fxFlex="100">
         <mat-form-field>
-          <input matInput [matDatepicker]="picker2" placeholder="Data final" [(ngModel)]="dateFinish" />
+          <input matInput [matDatepicker]="picker2" placeholder="{{final_data|translate}}" [(ngModel)]="dateFinish" />
           <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
           <mat-datepicker #picker2></mat-datepicker>
         </mat-form-field>
       </div>
       <div style="margin-left: 20px;" fxFlex.gt-xs="20" fxFlex="100">
       <mat-form-field>
-        <mat-select placeholder="Transaction Type" (selectionChange)="listHistory(false)" [(value)]="tType">
+        <mat-select placeholder="{{transaction_type|translate}}" (selectionChange)="listHistory(false)" [(value)]="tType">
           <mat-option *ngFor="let transactionType of transactionType" [value]="transactionType.id">
             {{ transactionType.name }}
           </mat-option>
